@@ -8,7 +8,6 @@
 package com.powsybl.iidm.serde.extensions;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.powsybl.commons.extensions.ExtensionSerDe;
@@ -46,6 +45,7 @@ public class SlackTerminalSerDe extends AbstractVersionableNetworkExtensionSerDe
                 .put(IidmVersion.V_1_10, ImmutableSortedSet.of("1.5"))
                 .put(IidmVersion.V_1_11, ImmutableSortedSet.of("1.5"))
                 .put(IidmVersion.V_1_12, ImmutableSortedSet.of("1.5"))
+                .put(IidmVersion.V_1_13, ImmutableSortedSet.of("1.5"))
                 .build(),
             new ImmutableMap.Builder<String, String>()
                 .put("1.0", "http://www.powsybl.org/schema/iidm/ext/slack_terminal/1_0")
@@ -64,7 +64,7 @@ public class SlackTerminalSerDe extends AbstractVersionableNetworkExtensionSerDe
 
     @Override
     public List<InputStream> getXsdAsStreamList() {
-        return ImmutableList.of(getClass().getResourceAsStream("/xsd/slackTerminal_V1_0.xsd"),
+        return List.of(getClass().getResourceAsStream("/xsd/slackTerminal_V1_0.xsd"),
                 getClass().getResourceAsStream("/xsd/slackTerminal_V1_1.xsd"),
                 getClass().getResourceAsStream("/xsd/slackTerminal_V1_2.xsd"),
                 getClass().getResourceAsStream("/xsd/slackTerminal_V1_3.xsd"),
